--- a/discord-font.css
+++ b/discord-font.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Discordinated';
-    src: url('https://raw.githubusercontent.com/Maddy-OwO/Fonts/main/DISCORDINATED.woff2') format('woff2'),
-        url('https://raw.githubusercontent.com/Maddy-OwO/Fonts/main/DISCORDINATED.woff') format('woff');
+    src: url('https://kckarnige.github.io/femboi_owo/DISCORDINATED.woff2') format('woff2'),
+        url('https://kckarnige.github.io/femboi_owo/DISCORDINATED.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
